--- a/ArcGISApp2/MainWindow.xaml
+++ b/ArcGISApp2/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:esri="http://schemas.esri.com/arcgis/runtime/2013"
-		Title="Suffolk County Navigation Towards Recovery" 
+		Title="Suffolk County Criminal Justice Coordinating Council" 
 		Height="700" 
 		Width="1050">
     <Grid>
@@ -137,30 +137,32 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Enter Client's Address" FontSize="14" FontWeight="Bold" 
+                    <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Suffolk County Navigation Towards Recovery" FontSize="14" FontWeight="Bold" 
+                               HorizontalAlignment="Center" Margin="0,0,0,6" />
+                    
+                    <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="Enter Client's Address" FontSize="12" FontWeight="Bold" 
                                HorizontalAlignment="Center" Margin="0,0,0,6" />
 
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Name: " 
+                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Name: " 
                                HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3" />
-                    <TextBox x:Name="Name" Grid.Row="1" Grid.Column="1" Text="" Margin="3" />
+                    <TextBox x:Name="Name" Grid.Row="2" Grid.Column="1" Text="" Margin="3" />
                     
-                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Address: " 
+                    <TextBlock Grid.Row="3" Grid.Column="0" Text="Address: " 
                                HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3" />
-                    <TextBox x:Name="InputAddress" Grid.Row="2" Grid.Column="1" Text="32 Arlington Road" Margin="3" />
+                    <TextBox x:Name="InputAddress" Grid.Row="3" Grid.Column="1" Text="32 Arlington Road" Margin="3" />
 
-                    <TextBlock Grid.Row="3" Grid.Column="0" Text="City: " 
+                    <TextBlock Grid.Row="4" Grid.Column="0" Text="City: " 
                                HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3" />
-                    <TextBox x:Name="City" Grid.Row="3" Grid.Column="1" Text="Lake Ronkonkoma" Margin="3" />
+                    <TextBox x:Name="City" Grid.Row="4" Grid.Column="1" Text="Lake Ronkonkoma" Margin="3" />
 
-                    <TextBlock Grid.Row="4" Grid.Column="0" Text="State: "
+                    <TextBlock Grid.Row="5" Grid.Column="0" Text="State: "
                                HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3" />
-                    <TextBox x:Name="State" Grid.Row="4" Grid.Column="1" Text="NY" Margin="3"/>
+                    <TextBox x:Name="State" Grid.Row="5" Grid.Column="1" Text="NY" Margin="3"/>
 
-                    <TextBlock Grid.Row="5" Grid.Column="0" Text="Zip: "
+                    <TextBlock Grid.Row="6" Grid.Column="0" Text="Zip: "
                                HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3" />
-                    <TextBox x:Name="Zip" Grid.Row="5" Grid.Column="1" Text="11779" Margin="3"/>
+                    <TextBox x:Name="Zip" Grid.Row="6" Grid.Column="1" Text="11779" Margin="3"/>
                 </Grid>
-                <CheckBox Content="Associate Client to Selected Agency" IsChecked="{Binding ElementName=MyMapView, Path=LocationDisplay.IsEnabled}" Margin="61,3,3,5"/>
 
                 <Button Content="Find Nearest Treatment Center" Margin="12,12,12,0" Padding="16,5" IsDefault="True" Click="FindAddressButton_Click" />
 
@@ -168,9 +170,10 @@
 
                 <TextBlock x:Name="txtResult" Margin="12,16,12,0" Visibility="Collapsed" 
                            FontSize="10" FontWeight="Bold" HorizontalAlignment="Center" />
+                <CheckBox Content="Associate Client to Selected Agency" IsChecked="{Binding ElementName=MyMapView, Path=LocationDisplay.IsEnabled}" Margin="61,3,3,5"/>
 
-               
-
+                
+         
                 <Button  Content="Load Bus Routes Map" Margin="12,12,12,0" Padding="16,5" IsDefault="True" Click="LoadLocalMap_Click" />
                 <Button  Content="Test Loading Web Map" Margin="12,12,12,0" Padding="16,5" IsDefault="True" Click="LoadWebMap_Click" />
                 <ListView x:Name="listResults" DataContext="{Binding ElementName=MyMapView, Path=GraphicsOverlays[graphicsOverlay]}" ItemsSource="{Binding Graphics}" Margin="0,12,0,0"
